# Raytracer_Plugin

./: README.md
raytracer_executor/: Cargo.toml
raytracer_executor/src/: main.rs
raytracer_plugin/: Cargo.toml
raytracer_plugin_circle/: Cargo.toml
raytracer_plugin_circle/src/: lib.rs
raytracer_plugin_line/: Cargo.toml
raytracer_plugin_line/src/: lib.rs
raytracer_shared/: Cargo.toml
raytracer_shared/src/: lib.rs  ray.rs  scene.rs  vec2.rs
raytracer_traits/: Cargo.toml
raytracer_traits/src/: intersection.rs
