[package]
name = "raytracer_plugin_line"
version = "0.1.5"
authors = ["Michael Völkl<michaelvoelkl@zoho.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raytracer_shared = { git = "https://github.com/voelklmichael/Raytracer_Plugin/"}
pkg-version = "1.0.0"
